fix: Resolve --grid-(collumns | gap) issue

--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -296,7 +296,7 @@
 
   .grid {
     @media (--tablet) {
-      --columns: 1;
+      --grid-columns: 1;
     }
   }
 }
