--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -41,7 +41,6 @@
 
 // #region: KPI
 .section.is-about .grid {
-  justify-content: center;
   > * {
     margin-inline: auto;
   }
